--- a/extension/package.json
+++ b/extension/package.json
@@ -1,12 +1,13 @@
 {
   "name": "tabula",
-  "version": "0.1.155",
+  "version": "0.2.0",
   "description": "TABULA - Take Back Your Life Again. A focused task manager for reclaiming your time.",
   "type": "module",
   "scripts": {
     "dev": "vite build --watch",
-    "build": "npm run version:bump && node scripts/build-all.js",
-    "build:nobump": "node scripts/build-all.js",
+    "build": "npm run icons && npm run version:bump && node scripts/build-all.js",
+    "build:nobump": "npm run icons && node scripts/build-all.js",
+    "icons": "node scripts/convert-svg-to-icons.js",
     "build:old": "tsc && vite build && node scripts/wrap-content.js",
     "version:bump": "node scripts/bump-version.js",
     "version:minor": "node scripts/bump-version.js minor",
@@ -39,6 +40,7 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "postcss": "^8.4.33",
+    "sharp": "^0.34.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
