--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "TABULA",
-  "version": "0.1.155",
+  "version": "0.2.0",
   "description": "Take Back Your Life Again - A focused task manager that helps you reclaim your time from distraction.",
   "action": {
     "default_title": "TABULA - Take Back Your Life Again",
@@ -29,6 +29,7 @@
   ],
   "icons": {
     "16": "icon16.png",
+    "32": "icon32.png",
     "48": "icon48.png",
     "128": "icon128.png"
   },
