--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "TABULA",
   "version": "0.2.41",
-  "description": "Take Back Your Life Again - A focused task manager that helps you reclaim your time from distraction.",
+  "description": "Turns Reddit, YouTube & Twitter into your todo list. 100% private, open-source, minimal permissions.",
   "action": {
     "default_title": "TABULA - Take Back Your Life Again",
     "default_icon": {
